# my-project

./: .gitignore  .replit  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/mockup-sandbox/: mockupPreviewPlugin.ts  vite.config.ts
backend/: .env.example  Dockerfile  alembic.ini  check_users.py  render.yaml  requirements.txt  seed_mock_regulatory_watches.py  seed_regulatory.py  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  35fd2d3504c7_add_justification_and_capa_to_.py  49765a66292e_add_phone_to_user.py  55444d484004_add_regulatory_watch_models.py  5843e28a5ebd_add_chat_messages.py  6c5c197b7192_add_timestamps_and_validation_dates_v2.py  79d5ce572ff7_add_user_verification_fields.py  985768f6035c_add_compliance_fields_to_gap_analysis_.py  a0abef686669_add_recovery_code_to_user.py  d008f4b5efd9_add_progress_column.py  d02c752aad72_add_gapanalysis_and_capa_models.py  d541964abd0b_add_standards_and_procedures_to_.py  de7a85be358e_add_message_hiding_support.py  fc2a02512030_add_is_validated_to_projects.py  ff6f97c31191_add_session_id_to_chat.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  dashboard.py  deps.py  (+9 more)
backend/scratch/: check_users.py  reset_password.py  test_ai_direct.py  verify_regulatory.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/dist_backup/: index.html
frontend/src/: App.tsx  index.css  main.tsx
(+43 files in other folders)
