[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "boto3==1.35.50",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "greenlet==3.1.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
    "openai>=1.0.0",
]
